--- a/instant/theme/assets/css/style.css
+++ b/instant/theme/assets/css/style.css
@@ -72,36 +72,13 @@ h1, h2, h3, h4, h5, h6 {
     color: #1C2336;
 }
 
-
-.navbar-brand {
-	font-weight: 700;
-}
-
-.navbar-default .navbar-brand {
-	color: #fff;
-}
-
-.navbar-default {
-	background-color: transparent;
-	border-color: transparent;
-}
-
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #fff;
-	background-color: transparent;
-	border-bottom: 2px solid #fff
-}
-
-.navbar-default .navbar-nav > li > a {
-	color: #fff;
-}
-
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/IMG_4035.jpg) no-repeat center top;
+  background: #1C2336;
+	/*background: url(../img/IMG_4035.jpg) no-repeat center top;*/
 	margin-top: -70px;
 	padding-top: 250px;
 	text-align:center;
@@ -131,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 }
 
-#headerwrap h4, h2 {
+#headerwrap h4 {
 	font-weight: 400;
 	color: #ffffff
 }
@@ -141,19 +118,15 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 50px;
 }
 
-#social {
+#headerwrap a:hover {
+  color: #f2f2f2;
+  font-size: 50px;
+}
+
+#skills {
 	padding-top: 50px;
 	padding-bottom: 50px;
 	background-color: #f2f2f2;
-}
-
-#social i {
-	font-size: 40px;
-	color: #1C2336
-}
-
-#social i:hover {
-	color: #1abc9c
 }
 
 #footerwrap {
