all icons open their link in a new window

--- a/instant/theme/assets/css/style.css
+++ b/instant/theme/assets/css/style.css
@@ -129,6 +129,10 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: #f2f2f2;
 }
 
+#portfolio{
+  margin-bottom: 15px;
+}
+
 #footerwrap {
 	padding-top: 70px;
 	padding-bottom: 50px;
