--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
 	color:#ffffff;
   margin-top: 110px;
 	padding-top: 10px;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	letter-spacing: 4px;
 	font-size: 80px;
 	font-weight: bold;
@@ -163,4 +163,17 @@ h1, h2, h3, h4, h5, h6 {
 
 .gallery p, .gallery-no-hover p{
   margin-bottom: 25px;
+}
+
+#portrait{
+  height: 300px;
+  width: 300px;
+  border: white solid 5px;
+  border-radius: 150px;
+  margin-top: 100px;
+
+}
+
+.icon{
+  margin-top: 20px;
 }
